@@ -30,24 +30,25 @@ import ch.ivy.addon.portalkit.service.TaskInforActionService;
 import ch.ivyteam.ivy.environment.Ivy;
 import ch.ivyteam.ivy.security.ISecurityMember;
 import ch.ivyteam.ivy.security.IUser;
-import ch.ivyteam.ivy.security.exec.Sudo;
 import ch.ivyteam.ivy.workflow.ICase;
 import ch.ivyteam.ivy.workflow.ITask;
 import ch.ivyteam.ivy.workflow.IWorkflowSession;
 import ch.ivyteam.ivy.workflow.TaskState;
 import ch.ivyteam.ivy.workflow.WorkflowPriority;
 import ch.ivyteam.ivy.workflow.query.TaskQuery;
+import ch.ivyteam.ivy.workflow.task.TaskBusinessState;
 
 public final class TaskUtils {
   private static final String PORTAL_GLOBAL_GROWL= "portal-global-growl";
   private static final String PORTAL_GLOBAL_GROWL_MESSAGE= "portal-global-growl-message";
+  private static final String PRIORITY_CMS_PATH = "/ch.ivy.addon.portalkit.ui.jsf/taskPriority/";
+  private static final String TASK_BUSINESS_STATE_CMS_PATH = "/ch.ivy.addon.portalkit.ui.jsf/taskBusinessState/";
 
   private TaskUtils() {}
 
   public static void resetTask(final ITask task) {
-    Sudo.get(() -> {
-      if (Arrays.asList(TaskState.RESUMED, TaskState.CREATED, TaskState.PARKED, TaskState.READY_FOR_JOIN,
-          TaskState.FAILED)
+    IvyExecutor.executeAsSystem(() -> {
+      if (Arrays.asList(TaskState.RESUMED, TaskState.CREATED, TaskState.PARKED, TaskState.READY_FOR_JOIN, TaskState.FAILED)
           .contains(task.getState())) {
         task.reset();
       }
@@ -61,7 +62,7 @@ public final class TaskUtils {
    * @param task : Task need to be park
    */
   public static void parkTask(final ITask task) {
-    Sudo.get(() -> {
+    IvyExecutor.executeAsSystem(() -> {
       IWorkflowSession iWorkflowSession = Ivy.session();
       iWorkflowSession.parkTask(task);
       return Void.class;
@@ -75,7 +76,7 @@ public final class TaskUtils {
    * @return Boolean
    */
   public static Boolean removeTaskDelay(final ITask task) {
-    return Sudo.get(() -> {
+    return IvyExecutor.executeAsSystem(() -> {
       task.setDelayTimestamp(null);
       return true;
     });
@@ -88,7 +89,7 @@ public final class TaskUtils {
    * @return Boolean
    */
   public static Boolean removeTaskDeadline(final ITask task) {
-    return Sudo.get(() -> {
+    return IvyExecutor.executeAsSystem(() -> {
       task.setExpiryTimestamp(null);
       return true;
     });
@@ -105,7 +106,7 @@ public final class TaskUtils {
     List<ITask> currentTasks = new ArrayList<>();
     if (iCase != null && iCase.tasks().all() != null && !iCase.tasks().all().isEmpty()) {
       for (ITask iTask : iCase.tasks().all()) {
-        if (iTask != null && TaskState.DONE == iTask.getState()) {
+        if (iTask != null && TaskBusinessState.DONE == iTask.getBusinessState()) {
           currentTasks.add(iTask);
         }
       }
@@ -120,7 +121,7 @@ public final class TaskUtils {
    * @param iSecurityMember
    */
   public static void delegateTask(final ITask iTask, final ISecurityMember iSecurityMember) {
-    Sudo.get(() -> {
+    IvyExecutor.executeAsSystem(() -> {
       iTask.setActivator(iSecurityMember);
       iTask.customFields().timestampField(CUSTOM_TIMESTAMP_FIELD5).set(new Date());
       return Void.class;
@@ -134,7 +135,7 @@ public final class TaskUtils {
    * @param iSecurityMember
    */
   public static void delegateTaskAfterEscalation(final ITask iTask, final ISecurityMember iSecurityMember) {
-    Sudo.get(() -> {
+    IvyExecutor.executeAsSystem(() -> {
       iTask.setExpiryActivator(iSecurityMember);
       return Void.class;
     });
@@ -167,7 +168,7 @@ public final class TaskUtils {
    * @return task if it exists and user has insufficient rights to see, null if otherwise
    */
   public static ITask findTaskUserHasPermissionToSee(final long taskId) {
-    return Sudo.get(() -> {
+    return IvyExecutor.executeAsSystem(() -> {
       TaskQuery taskQuery1 = TaskQuery.create().where().taskId().isEqual(taskId);
       TaskQuery taskQuery2 = TaskQuery.create().where().currentUserIsInvolved();
       IUser user = Ivy.session().getSessionUser();
@@ -184,16 +185,16 @@ public final class TaskUtils {
    * @return {@link ITask}
    */
   public static ITask findTaskById(long taskId) {
-    return Sudo.get(() -> {
+    return IvyExecutor.executeAsSystem(() -> {
       TaskQuery taskQuery = TaskQuery.create().where().taskId().isEqual(taskId);
       return Ivy.wf().getTaskQueryExecutor().getFirstResult(taskQuery);
     });
   }
 
   public static boolean isTaskCurrentOpeningTask(ITask task){
-    return Sudo.get(() -> {
+    return IvyExecutor.executeAsSystem(() -> {
       var wfTask = Ivy.wfTask();
-      return task.getState() == TaskState.RESUMED || task.getId() == wfTask.getId();
+      return task.getBusinessState() == TaskBusinessState.IN_PROGRESS || task.getId() == wfTask.getId();
     });
   }
   
@@ -211,34 +212,45 @@ public final class TaskUtils {
       if (task == null || Arrays.asList(TaskState.DONE, TaskState.DESTROYED).contains(task.getState())) {
         return;
       }
-      Sudo.get(() -> {
+      IvyExecutor.executeAsSystem(() -> {
         task.destroy();
         return Void.class;
       });
     }
   }
 
-  public static List<TaskState> getValidStates() {
+  public static List<TaskBusinessState> getValidStates() {
+    var states = new ArrayList<>(TaskSearchCriteria.STANDARD_BUSINESS_STATES);
+    if (PermissionUtils.checkReadAllTasksPermission()) {
+      states.addAll(TaskSearchCriteria.ADVANCE_BUSINESS_STATES);
+    } else {
+      states.add(TaskBusinessState.DONE);
+    }
+    return states.stream().sorted((s1, s2) -> StringUtils.compare(s1.toString(), s2.toString())).distinct()
+        .collect(Collectors.toList());
+  }
+
+  @Deprecated(since = "11.1")
+  public static List<TaskState> getOldValidStates() {
     var states = new ArrayList<>(TaskSearchCriteria.STANDARD_STATES);
     if (PermissionUtils.checkReadAllTasksPermission()) {
       states.addAll(TaskSearchCriteria.ADVANCE_STATES);
     } else {
       states.add(TaskState.DONE);
     }
-    return states.stream()
-        .sorted((s1, s2) -> StringUtils.compare(s1.toString(), s2.toString()))
+    return states.stream().sorted((s1, s2) -> StringUtils.compare(s1.toString(), s2.toString()))
         .collect(Collectors.toList());
   }
 
-  public static List<TaskState> filterStateByPermission(List<TaskState> states) {
+  public static List<TaskBusinessState> filterStateByPermission(List<TaskBusinessState> states) {
     var validStates = getValidStates();
     return CollectionUtils.emptyIfNull(states).stream()
         .filter(state -> validStates.contains(state))
-        .collect(Collectors.toList());
+        .collect(Collectors.toList()).stream().distinct().toList();
   }
 
   public static void handleStartTask(ITask task, PortalPage portalpage, String dialog) throws IOException {
-    if (task.getState() == TaskState.RESUMED) {
+    if (task.getBusinessState() == TaskBusinessState.IN_PROGRESS) {
       handleStartResumedTask(task, dialog);
     } else {
       startTask(task, portalpage);
@@ -288,7 +300,7 @@ public final class TaskUtils {
     String notification = "";
     List<Object> cmsList = new ArrayList<>();
     cmsList.add(task.names().current());
-    if (task.getState() == TaskState.DONE) {
+    if (task.getBusinessState() == TaskBusinessState.DONE) {
       notification = Ivy.cms().co("/ch.ivy.addon.portalkit.ui.jsf/components/taskStart/cannotStartMessages/taskDone", cmsList);
     } else if (!canResume(task)) {
       IUser worker = task.getWorkerUser();
@@ -331,39 +343,22 @@ public final class TaskUtils {
     String triggerNote = new TaskInforActionService().prepareTriggerEscalationNoteContent(fullName, userName, taskId);
     task.getCase().createNote(Ivy.session(), triggerNote);
   }
-  
-//To convert Ivy task state to portal task state with multiple languages
- public static String convertToUserFriendlyTaskState(TaskState state) {
-   if (state == null) {
-     return StringUtils.EMPTY;
-   }
-   String url = switch (state) {
-     case SUSPENDED -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/SUSPENDED_UPPERCASE";
-     case CREATED -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/OPEN_UPPERCASE";
-     case RESUMED -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/INPROGRESS";
-     case DONE -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/DONE_UPPERCASE";
-     case PARKED -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/RESERVED";
-     case DESTROYED -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/DESTROYED_UPPERCASE";
-     case DELAYED -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/DELAYED_UPPERCASE";
-     case READY_FOR_JOIN -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/READY_FOR_JOINING_UPPERCASE";
-     case FAILED -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/FAILED_UPPERCASE";
-     case JOIN_FAILED -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/JOIN_FAILED_UPPERCASE";
-     case WAITING_FOR_INTERMEDIATE_EVENT -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/WAITING_FOR_INTERMEDIATE_EVENT_UPPERCASE";
-     default -> "/ch.ivy.addon.portalkit.ui.jsf/taskState/SYSTEM";
-   };
-   return Ivy.cms().co(url);
- }
- 
- //To get Ivy task priority with multiple languages
- public static String convertToUserFriendlyTaskPriority (WorkflowPriority priority) {
-   if (priority == null) {
-     return StringUtils.EMPTY;
-   }
-   return switch(priority) {
-     case NORMAL -> Ivy.cms().co("/ch.ivy.addon.portalkit.ui.jsf/taskPriority/NORMAL");
-     case LOW -> Ivy.cms().co("/ch.ivy.addon.portalkit.ui.jsf/taskPriority/LOW");
-     case HIGH -> Ivy.cms().co("/ch.ivy.addon.portalkit.ui.jsf/taskPriority/HIGH");
-     default -> Ivy.cms().co("/ch.ivy.addon.portalkit.ui.jsf/taskPriority/EXCEPTION");
-   };
- }
+
+  //To convert Ivy task state to portal task state with multiple languages
+  public static String convertToUserFriendlyTaskState(TaskBusinessState state) {
+    if (state == null) {
+      return StringUtils.EMPTY;
+    }
+
+    return Ivy.cms().co(TASK_BUSINESS_STATE_CMS_PATH + state + "_UPPERCASE");
+  }
+
+  //To get Ivy task priority with multiple languages
+  public static String convertToUserFriendlyTaskPriority (WorkflowPriority priority) {
+    if (priority == null) {
+      return StringUtils.EMPTY;
+    }
+
+    return Ivy.cms().co(PRIORITY_CMS_PATH + priority);
+  }
 }
